# bootcamp-dbt-sql

./: README.md  pyproject.toml
src/: main.py
