[project]
name = "bootcamp-dbt-sql"
version = "0.1.0"
description = "Estudos sobre DBT na Jornada de Dados"
authors = [
    {name = "Victor Leite"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"